ADL Level 1 - OLTP formaat
